--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -19,6 +19,7 @@ jobs:
       - uses: pre-commit/action@v3.0.1
 
   test:
+    needs: pre-commit
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -39,7 +40,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          PYTHONPATH=src:$PYTHONPATH pytest --cov=monet_stats --cov-report=xml --cov-report=term-missing --cov-fail-under=50
+          pytest --cov=src/monet_stats --cov-report=xml --cov-report=term-missing --cov-fail-under=80
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -50,7 +51,7 @@ jobs:
           fail_ci_if_error: true
 
   build:
-    needs: [test]
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -80,6 +81,7 @@ jobs:
           path: dist/
 
   documentation:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -92,14 +94,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test,dev,docs]
+          pip install -e .[test,dev]
+          pip install sphinx sphinx-rtd-theme myst-parser
 
       - name: Build documentation
         run: |
-          mkdocs build
+          cd docs
+          sphinx-build -b html . _build/html
 
       - name: Upload documentation
         uses: actions/upload-artifact@v3
         with:
           name: documentation
-          path: site/
+          path: docs/_build/html/
