--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
       #     fail_ci_if_error: true
 
   build:
+    name: build
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -75,6 +76,7 @@ jobs:
           path: dist/
 
   documentation:
+    name: documentation
     runs-on: ubuntu-latest
     needs: test
     steps:
