Refactor imports in test_contingency_metrics.py for clarity; enhance error handling in validate_metric_output function; add performance optimization notebook for large datasets including chunked processing, parallel processing, and data type optimization techniques.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,11 @@ mypy_path = "src"
 [tool.ruff]
 line-length = 88
 target-version = "py38"
+exclude = [
+    "docs",
+    "*.ipynb",
+    "notebooks"
+]
 
 [tool.ruff.lint]
 select = [
