--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [main, develop]
   pull_request:
-    # branches: [main, develop]
+    branches: [main, develop]
 
 jobs:
   lint:
     name: pre-commit
     runs-on: ubuntu-latest
-    if: github.repository == 'noaa-oar-arl/monet-stats'
+    # if: github.repository == 'noaa-oar-arl/monet-stats'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
