--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,27 +15,9 @@ repos:
       - id: pyupgrade
         args: [--py36-plus]
 
-  - repo: https://github.com/PyCQA/isort
-    rev: "7.0.0"
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.4.4
     hooks:
-      - id: isort
-        args: [--line-length=100]
-
-  - repo: https://github.com/psf/black
-    rev: "25.12.0"
-    hooks:
-      - id: black
-        args: [--line-length=100]
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: "7.3.0"
-    hooks:
-      - id: flake8
-        args:
-          - --max-line-length=100
-          - --ignore=E203,E402,E501,W503,E226
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v4.0.0-alpha.8"
-    hooks:
-      - id: prettier
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
