--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dependencies = [
     "pandas>=1.3.0",
     "scipy>=1.7.0",
     "xarray>=0.19.0",
-    "matplotlib>=3.4.0"
+    "matplotlib>=3.4.0",
+    "dask>=2021.10.0",
+    "distributed>=2021.10.0",
 ]
 
 [project.optional-dependencies]
